[package]
name = "actix-todo-example"
version = "0.1.0"
authors = [ "Jonatas Oliveira <contact@jonatasoliveira.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo-example"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.2.1"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
cargo-watch = "8.4.0"
